welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:4: error: not found: value Color
	setCouleurBrosse(c:Color.red);
                           ^