welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.code
def dogHouse(); {
	baisseBrosse(); 
	setCouleurBrosse(c:Color.red);
	
	
	avance;

}

